Render basic timeline; avoid overlapping cards

--- a/public/main.less
+++ b/public/main.less
@@ -1,1 +1,15 @@
 @import "reset";
+
+* {
+    box-sizing: border-box;
+}
+
+event {
+    position: absolute;
+    display: inline-block;
+    max-width: 160px;
+    text-align: center;
+    background: rgba(186, 218, 85, 0.8);
+    border-radius: 4px;
+    padding: 0.2em;
+}
